# LearnMate

./: Dockerfile.dev  LICENSE  README.md
backend/: .env.sample  data.json  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
backend/my_agent/: agent.py  demo.py
backend/my_agent/edges/: generate_to_refine.py  inputs_to_generate.py  refine_to_exit.py  refine_to_generate.py  type_to_inputs.py
backend/my_agent/nodes/: ask_plan_type.py  gather_inputs.py  generate_plan.py  refine_plan.py
frontend/: .env.sample  package-lock.json  package.json
frontend/src/app/: WaitForUserInput.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
